--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "book_admin",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "5.4.4",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.15.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "webpack-dev-server": "^3"
   }
 }
